force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ManualCheckResult__c.field-meta.xml
<CustomField>
    <fullName>ManualCheckResult__c</fullName>
    <description>Campo per inserire l&apos;esito dei check procedurali da parte degli operatori</description>
    <label>Esito check manuale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dati corretti forniti da cliente e cambio uso inserito</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti da cliente e cambio uso - non necessario</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti dal DL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>