force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ManuallyReassigned__c.field-meta.xml
<CustomField>
    <fullName>ManuallyReassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Riassegnato Manualmente</label>
    <type>Checkbox</type>
</CustomField>