force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Dato di contatto cliente canale Phone</description>
    <label>Cellulare Self</label>
    <type>Phone</type>
</CustomField>