force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/NewEmail__c.field-meta.xml
<CustomField>
    <fullName>NewEmail__c</fullName>
    <description>Nuova e-mail necessaria per lo scarto documentale</description>
    <label>Nuova E-mail</label>
    <type>Email</type>
</CustomField>