force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/NewMobile__c.field-meta.xml
<CustomField>
    <fullName>NewMobile__c</fullName>
    <description>Nuovo numero di cellulare necessario per lo scarto documentale</description>
    <label>Nuovo Cellulare</label>
    <type>Phone</type>
</CustomField>