force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>Campo Note compilabile dall&apos;operatore</description>
    <label>Note</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>