force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/NoteRicontattoCliente__c.field-meta.xml
<CustomField>
    <fullName>NoteRicontattoCliente__c</fullName>
    <label>Note Ricontatto Cliente</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>