force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/OldCustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>OldCustomerAccount__c</fullName>
    <label>Account Vecchio Cliente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>