force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/OpeningNote__c.field-meta.xml
<CustomField>
    <fullName>OpeningNote__c</fullName>
    <description>Note delle attività manuali in fase di apertura</description>
    <label>Note di apertura</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>