force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/OperatorChange__c.field-meta.xml
<CustomField>
    <fullName>OperatorChange__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True se l&apos;attività è stata conclusa a seguito di un cambio operatore</description>
    <label>Cambio Operatore</label>
    <type>Checkbox</type>
</CustomField>