force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ParentActivity__c.field-meta.xml
<CustomField>
    <fullName>ParentActivity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Correlata</label>
    <referenceTo>wrts_prcgvr__Activity__c</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>