force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ParentCluster__c.field-meta.xml
<CustomField>
    <fullName>ParentCluster__c</fullName>
    <label>Cluster Padre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Cluster</valueSetName>
    </valueSet>
</CustomField>