force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ParentSubprocess__c.field-meta.xml
<CustomField>
    <fullName>ParentSubprocess__c</fullName>
    <label>Sottoprocesso Padre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accise - Agevolazione cliente</fullName>
            </value>
            <value>
                <fullName>Accise - Energia Elettrica</fullName>
            </value>
            <value>
                <fullName>Accise - Errata applicazione</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Account e Billing Profile</fullName>
                <isActive>false</isActive>
                <label>Account e Billing Profile</label>
            </value>
            <value>
                <fullName>Aggiunta Sconti o Bonus VAS</fullName>
                <isActive>false</isActive>
                <label>Aggiunta Sconti o Bonus VAS</label>
            </value>
            <value>
                <fullName>Billing Profile</fullName>
                <isActive>false</isActive>
                <label>Billing Profile</label>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>BP e CA</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>Cambio Amministratore</fullName>
            </value>
            <value>
                <fullName>Cambio Intest/Indirizzo Amministratore</fullName>
            </value>
            <value>
                <fullName>Con Autolettura</fullName>
            </value>
            <value>
                <fullName>Elementi di dettaglio</fullName>
            </value>
            <value>
                <fullName>Errore di Lettura</fullName>
            </value>
            <value>
                <fullName>Errore Stima Consumi</fullName>
            </value>
            <value>
                <fullName>Incorporazione societaria</fullName>
                <isActive>false</isActive>
                <label>Incorporazione societaria</label>
            </value>
            <value>
                <fullName>IVA - Agevolazione cliente</fullName>
            </value>
            <value>
                <fullName>IVA - Errata applicazione</fullName>
            </value>
            <value>
                <fullName>IVA - Esenzione</fullName>
            </value>
            <value>
                <fullName>IVA - Revoca Esenzione</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Contatto</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Recapito</fullName>
            </value>
            <value>
                <fullName>Modifica Dati di Recapito Votiva Modena</fullName>
            </value>
            <value>
                <fullName>Modifica Dati Fiscali</fullName>
            </value>
            <value>
                <fullName>Mortis Causa</fullName>
                <isActive>false</isActive>
                <label>Mortis Causa</label>
            </value>
            <value>
                <fullName>Ordinaria</fullName>
                <isActive>false</isActive>
                <label>Ordinaria</label>
            </value>
            <value>
                <fullName>Prima Attivazione con modifica</fullName>
                <isActive>false</isActive>
                <label>Prima Attivazione con modifica</label>
            </value>
            <value>
                <fullName>Prima Attivazione Ele</fullName>
                <isActive>false</isActive>
                <label>Prima Attivazione Ele</label>
            </value>
            <value>
                <fullName>Prima Attivazione Fuori delibera</fullName>
                <isActive>false</isActive>
                <label>Prima Attivazione Fuori delibera</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>