force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/PersonalData__c.field-meta.xml
<CustomField>
    <fullName>PersonalData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per gestione attività</description>
    <label>Dati Anagrafici</label>
    <type>Checkbox</type>
</CustomField>