force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/PetitionerAssigneeStructure__c.field-meta.xml
<CustomField>
    <fullName>PetitionerAssigneeStructure__c</fullName>
    <label>Struttura richiedente/assegnataria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canone Rai e Bonus</fullName>
            </value>
            <value>
                <fullName>CVM + Corp Mui</fullName>
            </value>
            <value>
                <fullName>STS x CVM + Corp Mui</fullName>
            </value>
            <value>
                <fullName>Esercizio Clienti</fullName>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>PPT</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>VENDITA</fullName>
            </value>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Credito HC</fullName>
            </value>
            <value>
                <fullName>Tesoreria</fullName>
            </value>
            <value>
                <fullName>Fatturazione e incassi</fullName>
            </value>
            <value>
                <fullName>DAFC</fullName>
            </value>
            <value>
                <fullName>Sales&amp;Marketing Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>