force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <formula>IF(NOT(ISNULL(Case__c)), TEXT(Case__r.Phase__c), IF(NOT(ISNULL(Order__c)), TEXT(Order__r.Phase__c), &quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fase</label>
    <type>Text</type>
</CustomField>