force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/PlanStartDate__c.field-meta.xml
<CustomField>
    <fullName>PlanStartDate__c</fullName>
    <label>Inizio pianificato</label>
    <type>DateTime</type>
</CustomField>