force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>Sottocategoria del processo richiesto su canale protocollo, su questo campo è basato l&apos;automatismo dell&apos;assegnazione pratiche</description>
    <label>Processo</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cluster__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aggiunta Attacco</fullName>
            </value>
            <value>
                <fullName>Alert</fullName>
            </value>
            <value>
                <fullName>Allineamento anagrafica</fullName>
            </value>
            <value>
                <fullName>Allineamento Canone RAI</fullName>
            </value>
            <value>
                <fullName>Annullamento Contratti</fullName>
            </value>
            <value>
                <fullName>Attivazione Click&amp;Pay</fullName>
            </value>
            <value>
                <fullName>Autolettura da cliente</fullName>
            </value>
            <value>
                <fullName>Blocco al Sollecito ed Interessi</fullName>
            </value>
            <value>
                <fullName>Caduta linea/Chiamata Muta</fullName>
            </value>
            <value>
                <fullName>Cambio contatore non registrato</fullName>
            </value>
            <value>
                <fullName>Chiusura contatore</fullName>
            </value>
            <value>
                <fullName>CMOR - Processi Venditore Entrante</fullName>
            </value>
            <value>
                <fullName>CMOR - Processi Venditore Uscente</fullName>
            </value>
            <value>
                <fullName>Comportamento altri Venditori</fullName>
            </value>
            <value>
                <fullName>Comportamento Venditori HC</fullName>
            </value>
            <value>
                <fullName>Comunicazione di fallimento</fullName>
            </value>
            <value>
                <fullName>Comunicazione pagamento</fullName>
            </value>
            <value>
                <fullName>Condizioni Contrattuali Errate</fullName>
            </value>
            <value>
                <fullName>Consegna copia chiave GDM</fullName>
            </value>
            <value>
                <fullName>Contenzioso in corso</fullName>
            </value>
            <value>
                <fullName>Copia Bolletta/Bollettino</fullName>
            </value>
            <value>
                <fullName>Dichiarazione di intento</fullName>
            </value>
            <value>
                <fullName>Disassociazione Utente Web</fullName>
            </value>
            <value>
                <fullName>Doppi Pagamenti/Incassi</fullName>
            </value>
            <value>
                <fullName>Errore chiamata</fullName>
            </value>
            <value>
                <fullName>Errore di Fatturazione</fullName>
            </value>
            <value>
                <fullName>Esecuzione lavori</fullName>
            </value>
            <value>
                <fullName>Esercizio Diritti</fullName>
            </value>
            <value>
                <fullName>Fattura_Contestazione</fullName>
            </value>
            <value>
                <fullName>Fiscale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>