force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QAdCallID__c.field-meta.xml
<CustomField>
    <fullName>QAdCallID__c</fullName>
    <description>ID univoco chiamata Qad</description>
    <externalId>true</externalId>
    <label>ID Chiamata QAd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>