force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QAdLogin__c.field-meta.xml
<CustomField>
    <fullName>QAdLogin__c</fullName>
    <description>Login operatore sportello inviato da Sigma al CRM.</description>
    <label>Login QAd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>