force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QAdMethod__c.field-meta.xml
<CustomField>
    <fullName>QAdMethod__c</fullName>
    <description>Metodo QAd inviato da Sigma al CRM.</description>
    <label>Metodo QAd</label>
    <length>50</length>
    <type>Text</type>
</CustomField>