force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QAdOfficeID__c.field-meta.xml
<CustomField>
    <fullName>QAdOfficeID__c</fullName>
    <description>ID Sportello QAd</description>
    <label>ID Sportello QAd</label>
    <length>30</length>
    <type>Text</type>
</CustomField>