force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QAdTicketCallTime__c.field-meta.xml
<CustomField>
    <fullName>QAdTicketCallTime__c</fullName>
    <description>Data e ora chiamata biglietto inviata da Sigma al CRM.</description>
    <label>Data e ora chiamata biglietto</label>
    <type>DateTime</type>
</CustomField>