force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/QualityCallStartDate__c.field-meta.xml
<CustomField>
    <fullName>QualityCallStartDate__c</fullName>
    <label>Quality Call Start Date</label>
    <type>Date</type>
</CustomField>