force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coda</label>
    <referenceTo>Queue__c</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>