force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Queued__c.field-meta.xml
<CustomField>
    <fullName>Queued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accodato</label>
    <type>Checkbox</type>
</CustomField>