force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Motivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dimostrata Estraneità</fullName>
            </value>
            <value>
                <fullName>Saldo pagato</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti dal cliente</fullName>
            </value>
            <value>
                <fullName>Dati corretti forniti dal DL</fullName>
            </value>
            <value>
                <fullName>Documentazione Incompleta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>