force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/RecordingLink__c.field-meta.xml
<CustomField>
    <fullName>RecordingLink__c</fullName>
    <description>Link per il download della registrazione della chiamata</description>
    <label>Link Registrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>