force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ReminderCount__c.field-meta.xml
<CustomField>
    <fullName>ReminderCount__c</fullName>
    <description>Numero di volte che l&apos;attività è stata sollecitata</description>
    <label>Numero Solleciti</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>