force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/RequestedCancellationDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedCancellationDate__c</fullName>
    <label>Data annullamento richiesta</label>
    <type>Date</type>
</CustomField>