force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Sale__c.field-meta.xml
<CustomField>
    <fullName>Sale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendita</label>
    <referenceTo>Sale__c</referenceTo>
    <relationshipLabel>Activities (Custom)</relationshipLabel>
    <relationshipName>Activities_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>