force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/SecureRecordId__c.field-meta.xml
<CustomField>
    <fullName>SecureRecordId__c</fullName>
    <description>Gestione appuntamento Self - Contiene l&apos;id del record per il link.</description>
    <label>Record Id Sicuro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>