force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ServicePointCode__c.field-meta.xml
<CustomField>
    <fullName>ServicePointCode__c</fullName>
    <description>Flag per gestione attività.</description>
    <label>Codice Service Point AU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>