force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/ShowEdit__c.field-meta.xml
<CustomField>
    <fullName>ShowEdit__c</fullName>
    <formula>AND(
    ISPICKVAL(DiscardCategory__c, &apos;Scarto complesso&apos;),
				RecordType.DeveloperName = &apos;HDT_RT_Scarto&apos;,
				NOT(wrts_prcgvr__IsClosed__c),
				NOT(ISPICKVAL(Type__c, &apos;Esito KO da DL&apos;)),
				NOT(ISPICKVAL(Type__c, &apos;Esito KO da DBO&apos;)),
				OR(
								 Case__r.RecordType.DeveloperName != &apos;HDT_RT_Morosita&apos;,
				     AND(
													OR(
																	ISPICKVAL(Case__r.Type, &apos;Votive Modena Pagamenti Morosità&apos;),				     
								         ISPICKVAL(Case__r.Type, &apos;Gestione Disalimentabilità&apos;),
								         ISPICKVAL(Case__r.Type, &apos;Riattivazione Fornitura&apos;)
													),
             Case__r.RecordType.DeveloperName = &apos;HDT_RT_Morosita&apos;
									)
				)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mostra Tasto Edit</label>
    <type>Checkbox</type>
</CustomField>