force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per gestione attività</description>
    <label>Firma</label>
    <type>Checkbox</type>
</CustomField>