force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/SignMode__c.field-meta.xml
<CustomField>
    <fullName>SignMode__c</fullName>
    <description>Viene restituita la modalità di firma dell&apos;ordine padre correlato, oppure dell&apos;ordine padre dell&apos;ordine correlato all&apos;attività</description>
    <formula>IF(Order__r.ParentOrder__c = null, TEXT(Order__r.SignatureMethod__c) , TEXT(Order__r.ParentOrder__r.SignatureMethod__c))</formula>
    <label>Modalità di firma</label>
    <type>Text</type>
</CustomField>