force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/StartAppointment__c.field-meta.xml
<CustomField>
    <fullName>StartAppointment__c</fullName>
    <label>Inizio Appuntamento</label>
    <type>Date</type>
</CustomField>