force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data attività</label>
    <type>Date</type>
</CustomField>