force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Stato dell&apos;attività</description>
    <label>Stato Lavorazione Attività</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Creata</fullName>
                <default>true</default>
                <label>Creata</label>
            </value>
            <value>
                <fullName>Invio app.to SELF cliente</fullName>
            </value>
            <value>
                <fullName>Presa appuntamento in corso</fullName>
            </value>
            <value>
                <fullName>Appuntamento di competenza Distributore</fullName>
            </value>
            <value>
                <fullName>Appuntamento confermato</fullName>
            </value>
            <value>
                <fullName>Modifica appuntamento in corso</fullName>
            </value>
            <value>
                <fullName>Modifica confermata</fullName>
            </value>
            <value>
                <fullName>Appuntamento non eseguito</fullName>
            </value>
            <value>
                <fullName>Appuntamento eseguito</fullName>
            </value>
            <value>
                <fullName>Annullata</fullName>
            </value>
            <value>
                <fullName>Chiusa</fullName>
            </value>
            <value>
                <fullName>Comunicazione Inviata</fullName>
            </value>
            <value>
                <fullName>KO Risolto</fullName>
            </value>
            <value>
                <fullName>KO Definitivo</fullName>
            </value>
            <value>
                <fullName>KO Forzato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>