force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Argomento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceso Piattaforme documentali</fullName>
            </value>
            <value>
                <fullName>Addebito su fornitura diversa da domestica residente</fullName>
            </value>
            <value>
                <fullName>Allineamenti Contrattuali richiesti dal Distributore Locale</fullName>
            </value>
            <value>
                <fullName>Allineamento portafoglio</fullName>
            </value>
            <value>
                <fullName>Ambiente</fullName>
            </value>
            <value>
                <fullName>Amministrazione Assegnatore regole</fullName>
            </value>
            <value>
                <fullName>Amministrazione Attività - campi</fullName>
            </value>
            <value>
                <fullName>Amministrazione Sistemi</fullName>
            </value>
            <value>
                <fullName>Analisi Reclamo Operatività CC</fullName>
            </value>
            <value>
                <fullName>Analisi situazione su CRM per gestione</fullName>
            </value>
            <value>
                <fullName>Assistenza procedurale e gestione pratiche</fullName>
            </value>
            <value>
                <fullName>Attività concordate</fullName>
            </value>
            <value>
                <fullName>Autolettura inferiore lettura migrazione</fullName>
            </value>
            <value>
                <fullName>Bonus mancante</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>C_Malfunzionamento processi</fullName>
            </value>
            <value>
                <fullName>C_Malfunzionamento sistemi/funzionalità</fullName>
            </value>
            <value>
                <fullName>C_Post avvio progetti</fullName>
            </value>
            <value>
                <fullName>Cessione credito</fullName>
            </value>
            <value>
                <fullName>Chiarimento su importo o numero rate</fullName>
            </value>
            <value>
                <fullName>Cliente critico</fullName>
            </value>
            <value>
                <fullName>Cliente senza servizio</fullName>
            </value>
            <value>
                <fullName>Clienti senza fornitura, urgenza attività</fullName>
            </value>
            <value>
                <fullName>Clienti TOP Business/Grandi Condomini</fullName>
            </value>
            <value>
                <fullName>Comportamento della Banca (Bollettino, CBILL etc)</fullName>
            </value>
            <value>
                <fullName>Comportamento della Provider (Sisal, Lottomatica, Coop, etc)</fullName>
            </value>
            <value>
                <fullName>Comprensione voci invito a fatturare</fullName>
            </value>
            <value>
                <fullName>Comunicazioni urgenti Linea Diretta</fullName>
            </value>
            <value>
                <fullName>Comunicazioni urgenti Supporto Agenzie</fullName>
            </value>
            <value>
                <fullName>Consip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>