force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/SuspensionDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionDate__c</fullName>
    <description>Il campo avrà formato data gg/mm/aaaa</description>
    <label>Data Sospensione</label>
    <type>Date</type>
</CustomField>