force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/SuspensionDueDate__c.field-meta.xml
<CustomField>
    <fullName>SuspensionDueDate__c</fullName>
    <description>Il campo avrà formato data gg/mm/aaaa</description>
    <label>Data Scadenza Sospensione</label>
    <type>DateTime</type>
</CustomField>