force-app/main/default/objects/wrts_prcgvr__Activity__c/fields/UDBCode__c.field-meta.xml
<CustomField>
    <fullName>UDBCode__c</fullName>
    <label>Codice UDB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>